--- a/.gitignore
+++ b/.gitignore
@@ -15,13 +15,25 @@
 /cfg/**/*
 !/cfg/conf.py
 !/cfg/index.rst
-!/cfg/userguide/
-!/cfg/userguide/**/*.rst
-!/cfg/reference/
-!/cfg/reference/**/*.rst
-!/cfg/changelog/
-!/cfg/changelog/**/*.rst
+
 !/cfg/_templates/
+!/cfg/_templates/**/*/
 !/cfg/_templates/**/*.rst
+
 !/cfg/_static/
+!/cfg/_static/**/*/
 !/cfg/_static/**/*.rst
+
+!/cfg/userguide/
+!/cfg/userguide/**/*/
+!/cfg/userguide/**/*.rst
+
+!/cfg/changelog/
+!/cfg/changelog/**/*/
+!/cfg/changelog/**/*.rst
+
+!/cfg/reference/
+!/cfg/reference/**/*/
+!/cfg/reference/**/*.rst
+
+/cfg/reference/_*/
